# iDDS-Module

./: .gitignore  CMakeLists.txt  README.md  setenv.tmpl
.github/workflows/: cmake-multi-platform.yml
Messenger/: CMakeLists.txt  GNUmakefile  GNUmakefile.Messenger_Idl  GNUmakefile.Messenger_Publisher  GNUmakefile.Messenger_Subscriber  Publisher.cpp  Subscriber.cpp
cmake/: CommonUtils.cmake  SetupDDS.cmake
examples/: App1.cpp  App2.cpp  App3.cpp  CMakeLists.txt  idds-complete-device.cpp  idds-simple-device.cpp  idds_client.cpp  idds_server.cpp  xml-example.cpp
helloworld/: CMakeLists.txt  publisher.cpp  subscriber.cpp
idds_client_module/include/idds_client_module/: common.h  idds_client_module_impl.h  idds_device_impl.h
idds_client_module/src/: CMakeLists.txt  idds_client_module_impl.cpp  idds_device_impl.cpp
idds_server_module/: CMakeLists.txt
idds_server_module/include/idds_server_module/: idds_server_impl.h  idds_server_module_impl.h
idds_server_module/src/: CMakeLists.txt  idds_server_impl.cpp  idds_server_module_impl.cpp
idds_wrapper/: README.md
idds_wrapper/idl/: iDDS.idl
idds_wrapper/include/idds_wrapper/: CommandListenerImpl.h  DataReaderListenerImpl.h  channel_streamer.h  command_handler.h  command_processor.h  iDDSDevice.h  iDDSDeviceBuilder.h  idds_common.h  idds_device_builder.h  idds_device_impl.h  idds_device_info.h  idds_state_machine.h  message_listener.h  node_advertiser.h  node_discovery.h
idds_wrapper/src/: CMakeLists.txt  CommandListenerImpl.cpp  DataReaderListenerImpl.cpp  channel_streamer.cpp  command_handler.cpp  command_processor.cpp  iDDSDevice.cpp  iDDSDeviceBuilder.cpp  idds_device_builder.cpp  idds_device_impl.cpp  message_listener.cpp  node_advertiser.cpp  node_discovery.cpp  quick_start_empty.cpp
idds_wrapper/tests/: CMakeLists.txt  test_command_handler.cpp  test_command_processor.cpp  test_idds_device.cpp
idds_xml_parser/include/: idds_xml_error.h  idds_xml_params_decode.h  idds_xml_params_encode.h  idds_xml_request.h  idds_xml_response.h  idds_xml_types.h  idds_xml_utils.h
idds_xml_parser/src/: CMakeLists.txt  idds_xml_params_decode.cpp  idds_xml_params_encode.cpp  idds_xml_request.cpp  idds_xml_response.cpp
idds_xml_parser/tests/: CMakeLists.txt  test_app.cpp  test_idds_xml_params_decoding.cpp  test_idds_xml_params_enconding.cpp  test_idds_xml_request.cpp  test_idds_xml_response.cpp  utils.h
